// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onSearch updating options updates the displayed options 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="true"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-combobox__listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        Strawberry
      </li>
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        Raspberry
      </li>
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options as array of objects disabled sets the aria-disabled attribute 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="true"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-combobox__listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-disabled="true"
        class="react-combo-boxes-combobox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options as array of objects group renders grouped options 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-hidden="true"
        class="react-combo-boxes-combobox__group-label"
        id="id_group_citrus"
      >
        Citrus
      </li>
      <li
        aria-labelledby="id_group_citrus id_option_orange"
        class="react-combo-boxes-combobox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
      <li
        aria-labelledby="id_group_citrus id_option_lemon"
        class="react-combo-boxes-combobox__option"
        id="id_option_lemon"
        role="option"
        tabindex="-1"
      >
        Lemon
      </li>
      <li
        aria-hidden="true"
        class="react-combo-boxes-combobox__group-label"
        id="id_group_berry"
      >
        Berry
      </li>
      <li
        aria-labelledby="id_group_berry id_option_raspberry"
        class="react-combo-boxes-combobox__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        Raspberry
      </li>
      <li
        aria-labelledby="id_group_berry id_option_strawberry"
        class="react-combo-boxes-combobox__option"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        Strawberry
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options as array of objects label renders a closed combo box 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options as array of objects missing label treats as undefined 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      />
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options options as array of numbers renders a closed combo box 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_1"
        role="option"
        tabindex="-1"
      >
        1
      </li>
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_2"
        role="option"
        tabindex="-1"
      >
        2
      </li>
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_3"
        role="option"
        tabindex="-1"
      >
        3
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options options as array of strings renders a closed combo box 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options options as null renders an option with an empty string 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      />
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_foo"
        role="option"
        tabindex="-1"
      >
        foo
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options options as undefined renders an option with an empty string 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-combobox__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-combobox__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      />
      <li
        class="react-combo-boxes-combobox__option"
        id="id_option_foo"
        role="option"
        tabindex="-1"
      >
        foo
      </li>
    </ul>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
